Text align fix

--- a/front-end/css/game.css
+++ b/front-end/css/game.css
@@ -284,9 +284,13 @@ table {
     margin: 0 auto;
 }
 
+th, td {
+    text-align: left;
+    padding: 3px;
+}
+
 td {
   font-size: 1.4em;
-  padding: 3px;
 }
 
 tr {
